--- a/utilities/visual_debugger/CMakeLists.txt
+++ b/utilities/visual_debugger/CMakeLists.txt
@@ -5,4 +5,5 @@ target_link_libraries(debugger PRIVATE ${LOWLEVEL_NAME} nuklear tinyfiledialogs)
 CopyDLL(debugger)
 
 add_executable(test_client test_data_send_client.cpp)
+add_executable(data_reader data_reader.cpp)
 target_compile_features(test_client PRIVATE cxx_std_14)
